--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -1,6 +1,11 @@
+$bp-desktop: 1140px;
+$bp-tablet: 992px;
+$bp-mobile: 580px;
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 img {
