--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,6 +4,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 0;
+
+    @media only screen and (max-width: $bp-tablet) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .site-logo {
@@ -21,6 +26,11 @@
 
     form {
       margin-right: 40px;
+
+      @media only screen and (max-width: $bp-tablet) {
+        margin-right: 20px;
+      }
+
       input {
         height: 50px;
         border: 2px solid #000000;
