Add button component and styles

--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -1,7 +1,12 @@
 .grid {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  text-align: center;
+
+  &__wrap {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
 
   .card {
     width: 31%;
