--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -5,7 +5,7 @@
       a {
         font-size: 25px;
         text-decoration: none;
-        color: #000000;
+        color: $c-black;
       }
     }
   }
