--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   text-align: center;
-  background-color: #000000;
+  background-color: $c-black;
   padding: 50px 0;
-  color: #ffffff;
+  color: $c-white;
   font-weight: 700;
 }
