--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  background-color: $c-lightGray;
   &__wrap {
     display: flex;
     justify-content: space-between;
@@ -14,7 +15,7 @@
   .site-logo {
     a {
       font-size: 40px;
-      color: #000000;
+      color: $c-black;
       text-decoration: none;
       font-weight: 700;
     }
@@ -33,7 +34,7 @@
 
       input {
         height: 50px;
-        border: 2px solid #000000;
+        border: 2px solid $c-black;
         border-radius: 5px;
         margin-right: 10px;
         display: inline-block;
@@ -41,11 +42,11 @@
 
       button {
         height: 55px;
-        border: 2px solid #000000;
-        background-color: #000000;
+        border: 2px solid $c-black;
+        background-color: $c-black;
         border-radius: 5px;
         padding: 10px 20px;
-        color: #ffffff;
+        color: $c-white;
         font-size: 20px;
       }
     }
