--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -1,9 +1,14 @@
 .section {
-  padding: 50px 0;
+  padding: 100px 0;
+
+  &:nth-child(2n + 2) {
+    background-color: $c-lightGray;
+  }
 
   &__header {
     h2 {
       font-size: 50px;
+      color: $c-black;
     }
   }
 }
