--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import "./src/sass/general";
 @import "./src/sass/section";
+@import "./src/sass/button";
 @import "./src/sass/header";
 @import "./src/sass/card";
 @import "./src/sass/grid";
