Add company name and logo

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -1,6 +1,6 @@
 $c-black: #0d0d0d;
 $c-darkGray: #262626;
-$c-lightGray: #a6a6a6;
+$c-lightGray: #fafafa;
 $c-white: #e9e9e9;
 
 $bp-desktop: 1140px;
