--- a/src/style.scss
+++ b/src/style.scss
@@ -4,4 +4,6 @@
 @import "./src/sass/header";
 @import "./src/sass/card";
 @import "./src/sass/grid";
+@import "./src/sass/sidebar";
 @import "./src/sass/footer";
+@import "./src/sass/listing-page";
