--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -1,6 +1,8 @@
 .sidebar {
   min-width: 340px;
-  margin-left: 20px;
+  margin-right: 20px;
+  padding: 20px;
+  background-color: $c-lightGray;
 
   &__filters {
     ul {
@@ -15,6 +17,11 @@
         font-weight: 700;
         opacity: 0.6;
         cursor: pointer;
+        transition: opacity 0.5s;
+
+        &.active {
+          opacity: 1;
+        }
       }
     }
 
