--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -12,6 +12,7 @@
     width: 31%;
     margin-right: 2%;
     margin-bottom: 20px;
+    background-color: $c-lightGray;
 
     @media only screen and (max-width: $bp-desktop) {
       width: 48%;
