--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -7,6 +7,10 @@ $bp-desktop: 1140px;
 $bp-tablet: 992px;
 $bp-mobile: 580px;
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
