--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import "./src/sass/general";
 @import "./src/sass/section";
 @import "./src/sass/button";
+@import "./src/sass/label";
 @import "./src/sass/header";
 @import "./src/sass/card";
 @import "./src/sass/grid";
@@ -9,3 +10,4 @@
 @import "./src/sass/footer";
 @import "./src/sass/listing-page";
 @import "./src/sass/home";
+@import "./src/sass/product";
