Replace images with slider in product detail

--- a/src/sass/_product.scss
+++ b/src/sass/_product.scss
@@ -1,4 +1,12 @@
 .product {
+  &__gallery {
+    &--item {
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
   &__tags {
     &--body {
       .label {
