--- a/src/style.scss
+++ b/src/style.scss
@@ -11,3 +11,5 @@
 @import "./src/sass/listing-page";
 @import "./src/sass/home";
 @import "./src/sass/product";
+@import "./src/sass/cart";
+@import "./src/sass/checkout";
