--- a/src/sass/_cart.scss
+++ b/src/sass/_cart.scss
@@ -1,4 +1,5 @@
 .cart {
+  min-height: 80vh;
   table {
     width: 100%;
     thead {
@@ -28,6 +29,44 @@
           border-bottom: 1px solid $c-black;
           border-right: 1px solid $c-black;
           padding: 15px;
+
+          .qty-container {
+            display: flex;
+            justify-content: center;
+
+            input {
+              max-width: 100px;
+              display: block;
+              height: 40px;
+              text-align: center;
+              font-size: 16px;
+              font-weight: bold;
+              border: none;
+              background-color: $c-lightGray;
+            }
+            button {
+              height: 40px;
+              border-radius: 0;
+              border: 1px solid $c-black;
+              background-color: transparent;
+              padding: 0 15px;
+              cursor: pointer;
+              font-size: 22px;
+            }
+          }
+
+          .btn-close {
+            opacity: 0.6;
+            border: none;
+            background-color: transparent;
+            transition: all 1s;
+            cursor: pointer;
+            font-size: 22px;
+
+            :hover {
+              opacity: 1;
+            }
+          }
 
           img {
             display: block;
