--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -34,21 +34,27 @@
 
     form {
       margin-right: 40px;
+      display: flex;
+      align-items: center;
 
       @media only screen and (max-width: $bp-tablet) {
         margin-right: 20px;
       }
 
       input {
+        display: inline-block;
         height: 50px;
         border: 2px solid $c-black;
         border-radius: 5px;
         margin-right: 10px;
         display: inline-block;
+        line-height: 1;
       }
 
       button {
-        height: 55px;
+        margin-top: 1px;
+        display: inline-block;
+        height: 50px;
         border: 2px solid $c-black;
         background-color: $c-black;
         border-radius: 5px;
@@ -59,7 +65,25 @@
     }
 
     .cart-icon {
-      font-size: 35px;
+      position: relative;
+      .items-num {
+        min-width: 25px;
+        height: 25px;
+        padding: 5px;
+        text-align: center;
+        position: absolute;
+        top: -5px;
+        right: -17px;
+        background-color: red;
+        border-radius: 30px;
+        color: $c-white;
+        font-weight: 700;
+        line-height: 1;
+      }
+      a {
+        color: $c-black;
+        font-size: 35px;
+      }
     }
   }
 }
